tests/errors/sem.type-invalid.compound-arith-assign.or
main :: () -> void {
    x := false;
    x += true;
};
